# Hamilton

./: .gitignore  Dockerfile  Dockerfile.hamilton-arm  Dockerfile.yocto  README.md  app.py  ci_pipeline.sh  entrypoint.sh
.github/workflows/: ci-cd.yaml  hamilton-arm-ci-cd.yaml  sonarqube.yml  yocto-rpi3.yml
k8s/: deploy-ki-service.sh  deployment.yaml  ingress.yaml  service.yaml  sonarqube-setup.yaml
src/: ventilator.cpp
src_org/: CMakeLists.txt  Makefile  hamilton_logic.cpp  medical-config.yaml  sonar-project.properties  ventilator.cpp
